Prettify and get it working ™️

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+  <style>
+    body {
+      background: #272722;
+      color: #efefef;
+      font-family: sans-serif;
+      font-size: 16px;
+    }
+
+    input, textarea {
+      background: transparent;
+      font-size: inherit;
+      padding: 8px 16px;
+      border: 1px solid rgba(255, 255, 255, .5);
+      color: inherit;
+    }
+
+    button {
+      color: #efefef;
+      background: #373732;
+      font-size: inherit;
+      padding: 8px 16px;
+      border: 1px solid rgba(255, 255, 255, .5);
+      cursor: pointer;
+    }
+
+    * {
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+    }
+  </style>
 </head>
 
 <body>
